// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders no errors 1`] = `
<section
  className="ErrorPane"
>
  <section
    className="ErrorPane-empty-message"
  >
    <svg>
      logo-wordmark-gray.svg
    </svg>
    <h2>
      No Errors Found
    </h2>
  </section>
</section>
`;

exports[`renders one build error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <code>
        <span
          className={null}
          style={null}
        >
          laa dee daa I'm an error
        </span>
      </code>
      <code>
        <span
          className={null}
          style={null}
        >
          for real I am
        </span>
      </code>
    </li>
  </ul>
</section>
`;

exports[`renders one container start error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      Eeeeek there is a problem
    </li>
  </ul>
</section>
`;

exports[`renders one container start error 2`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      Eeeeek there is a problem
    </li>
  </ul>
</section>
`;

exports[`renders the last build with an error 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <code>
        <span
          className={null}
          style={null}
        >
          laa dee daa I'm another error
        </span>
      </code>
      <code>
        <span
          className={null}
          style={null}
        >
          Better watch out
        </span>
      </code>
    </li>
  </ul>
</section>
`;

exports[`shows that a container has restarted 1`] = `
<section
  className="ErrorPane"
>
  <ul>
    <li
      className="ErrorPane-item"
    >
      <p>
        foo has container restarts: 1.
      </p>
      <p>
        Last log line: Eeeeek the container crashed
      </p>
    </li>
  </ul>
</section>
`;
